Fix warnings on deprecated java feature